<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:app="http://schemas.android.com/apk/res-auto">

        <Button
            android:id="@+id/btnSeven"
            style="@style/DigitButtonStyle"
            android:onClick="onDigitClicked"
            android:text="@string/digit_seven"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_rowWeight="1"/>

        <Button
            android:id="@+id/btnEight"
            android:onClick="onDigitClicked"
            android:text="@string/digit_eight"
            style="@style/DigitButtonStyle"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_rowWeight="1"/>

        <Button
            android:id="@+id/btnNine"
            android:onClick="onDigitClicked"
            android:text="@string/digit_nine"
            style="@style/DigitButtonStyle"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_rowWeight="1"/>

        <Button
            android:id="@+id/btnFour"
            android:onClick="onDigitClicked"
            android:text="@string/digit_four"
            style="@style/DigitButtonStyle"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_rowWeight="1"/>

        <Button
            android:id="@+id/btnFive"
            android:onClick="onDigitClicked"
            android:text="@string/digit_five"
            style="@style/DigitButtonStyle"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_rowWeight="1"/>

        <Button
            android:id="@+id/btnSix"
            android:onClick="onDigitClicked"
            android:text="@string/digit_six"
            style="@style/DigitButtonStyle"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_rowWeight="1"/>

        <Button
            android:id="@+id/btnOne"
            android:onClick="onDigitClicked"
            android:text="@string/digit_one"
            style="@style/DigitButtonStyle"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_rowWeight="1"/>

        <Button
            android:id="@+id/btnTwo"
            android:onClick="onDigitClicked"
            android:text="@string/digit_two"
            style="@style/DigitButtonStyle"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_rowWeight="1"/>

        <Button
            android:id="@+id/btnThree"
            android:onClick="onDigitClicked"
            android:text="@string/digit_three"
            style="@style/DigitButtonStyle"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_rowWeight="1"/>

        <Button
            android:id="@+id/btnDot"
            android:onClick="onDigitClicked"
            android:text="@string/dot"
            style="@style/DigitButtonStyle"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_rowWeight="1"/>

        <Button
            android:id="@+id/btnZero"
            android:onClick="onDigitClicked"
            android:text="@string/digit_zero"
            style="@style/DigitButtonStyle"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_rowWeight="1"/>

        <ImageButton
            android:id="@+id/btnDel"
            style="@style/DigitButtonStyle"
            android:onClick="onDigitClicked"
            android:text="@string/del"
            android:tint="@color/primary_text"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_rowWeight="1"
            app:srcCompat="@drawable/ic_backspace"/>
</merge>